hard-gists/1907f96e6e680bbeb15393d4f441b55e/run.log
=== Docker Run Log for 1907f96e6e680bbeb15393d4f441b55e ===
Started at: Mi 29. Okt 12:33:49 CET 2025

[2025-10-29 12:33:50] START: Running container for 1907f96e6e680bbeb15393d4f441b55e
[2025-10-29 12:33:50] SUCCESS: Container 3ffe4f014dc6fbe3f17740cb520ceaa1f2c4741ac28f71393578671505d352ff started for 1907f96e6e680bbeb15393d4f441b55e
=== Container logs for 1907f96e6e680bbeb15393d4f441b55e ===
  File "/snippet.py", line 94
    print l,
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1907f96e6e680bbeb15393d4f441b55e ===
[2025-10-29 12:33:52] INFO: Container 3ffe4f014dc6fbe3f17740cb520ceaa1f2c4741ac28f71393578671505d352ff has stopped
